--- a/helm/linkerd2-app/Chart.yaml
+++ b/helm/linkerd2-app/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: stable-2.6.0
+appVersion: edge-19.10.5
 description: Linkerd gives you observability, reliability, and security for your microservices
   — with no code change required.
 home: https://linkerd.io
@@ -11,7 +11,7 @@ maintainers:
 - email: cncf-linkerd-dev@lists.cncf.io
   name: Linkerd authors
   url: https://linkerd.io/
-name: linkerd2-app
+name: linkerd2
 sources:
 - https://github.com/linkerd/linkerd2/
-version: 0.0.1
+version: 19.10.5
