config maker works

--- a/helm/linkerd2-app/templates/config.yaml
+++ b/helm/linkerd2-app/templates/config.yaml
@@ -10,8 +10,8 @@ metadata:
     {{.ControllerNamespaceLabel}}: {{.Namespace}}
   annotations:
     {{.CreatedByAnnotation}}: {{default (printf "linkerd/helm %s" .LinkerdVersion) .CliVersion}}
-    "helm.sh/hook": post-install
-    "helm.sh/hook-weight": "-5"
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-weight": "-4"
 data:
   global: |
   {{- if .Configs -}}
