--- a/helm/linkerd2-app/templates/hook-pre-update-config-with-cert-job.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-update-config-with-cert-job.yaml
@@ -10,7 +10,6 @@ metadata:
     "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
   labels:
     app: global-config-creator
-    giantswarm.io/service-type: "managed"
 rules:
 - apiGroups:
   - ""
@@ -82,7 +81,7 @@ metadata:
   namespace: {{ .Values.Namespace }}
   annotations:
     "helm.sh/hook": "pre-install"
-    #    "helm.sh/hook-delete-policy": "hook-succeeded"
+    "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
   labels:
     app: global-config-creator
     giantswarm.io/service-type: "managed"
@@ -96,10 +95,8 @@ spec:
         command:
         - /bin/bash
         - -e
-        - -x
         - -c
         - |
-          set -e; while true; do export CERT=`kubectl -n linkerd get secret linkerd-identity-issuer -o jsonpath="{.data['ca\.crt']}"`; if [[ $? == 0 && -n $CERT ]]; then break; fi; echo \"waiting for cert\"; sleep 1; done; while true; do kubectl -n linkerd get cm linkerd-config -o yaml --export > /tmp/config.yaml; if [[ $? == 0 ]]; then break; fi; echo "waiting for config"; sleep 1; done; sed -i "s/REPLACE_ME/$CERT/" /tmp/config.yaml; kubectl -n linkerd replace configmap linkerd-config -f /tmp/config.yaml
-          #          export CERT=\"`kubectl -n linkerd get secret linkerd-identity-issuer -o jsonpath=\"{.data['ca\.crt']}\"`\" && kubectl -n linkerd get cm linkerd-config -o yaml --export > /tmp/config.yaml && sed -i \"s/REPLACE_ME/\$CERT/\" /tmp/config.yaml; #kubectl -n linkerd replace configmap linkerd-config -f /tmp/config.yam
+          while true; do export CERT=`kubectl -n linkerd get secret linkerd-identity-issuer -o jsonpath="{.data['ca\.crt']}"`; if [[ $? == 0 && -n $CERT ]]; then break; fi; echo \"waiting for cert\"; sleep 1; done; while true; do kubectl -n linkerd get cm linkerd-config -o yaml --export > /tmp/config.yaml; if [[ $? == 0 ]]; then break; fi; echo "waiting for config"; sleep 1; done; sed -i "s/REPLACE_ME/$CERT/" /tmp/config.yaml; kubectl -n linkerd replace configmap linkerd-config -f /tmp/config.yaml
       restartPolicy: Never
   backoffLimit: 6
