--- a/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
+++ b/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
@@ -6,7 +6,8 @@ metadata:
   namespace: {{ .Values.Namespace }}
   annotations:
     "helm.sh/hook": "post-delete"
-    #    "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
+    "helm.sh/hook-weight": "-5"
+    "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
   labels:
     app: linkerd-janitor
 rules:
@@ -95,7 +96,8 @@ metadata:
   namespace: {{ .Values.Namespace }}
   annotations:
     "helm.sh/hook": "post-delete"
-    "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
+    "helm.sh/hook-weight": "-3"
+    #  "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
   labels:
     app: linkerd-janitor
 spec:
@@ -109,8 +111,13 @@ spec:
         - /bin/bash
         - -e
         - -c
-        - |
+        - >-
+          kubectl -n linkerd delete certificate linkerd;
+          kubectl -n linkerd delete certificate linkerd-ca;
+          kubectl -n linkerd delete issuer linkerd-ca-issuer;
+          kubectl -n linkerd delete issuer linkerd-selfsigning-issuer;
           kubectl -n linkerd delete secret linkerd-ca-tls;
           kubectl -n linkerd delete secret linkerd-identity-issuer;
+          kubectl -n linkerd delete configmap linkerd-config;
       restartPolicy: Never
   backoffLimit: 6
