--- a/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
+++ b/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
@@ -18,7 +18,7 @@ rules:
   resourceName:
   - linkerd-config
   verbs:
-  - "delete"
+  - delete
 - apiGroups:
   - ""
   resources:
@@ -27,20 +27,20 @@ rules:
   - linkerd-identity-issuer
   - linkerd-ca-tls
   verbs:
-  - "delete"
+  - delete
 - apiGroups:
-  - "certmanager.k8s.io"
+  - certmanager.k8s.io
   resources:
-  - "issuer"
+  - issuers
   resourceName:
   - linkerd-ca-issuer
   - linkerd-selfsigning-issuer
   verbs:
   - delete
 - apiGroups:
-  - "certmanager.k8s.io"
+  - certmanager.k8s.io
   resources:
-  - "certificate"
+  - certificates
   resourceName:
   - linkerd-ca
   - linkerd
@@ -53,7 +53,7 @@ rules:
   resourceNames:
   - linkerd-{{.Values.Namespace}}-control-plane
   verbs:
-  - "use"
+  - use
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -97,7 +97,7 @@ metadata:
   annotations:
     "helm.sh/hook": "post-delete"
     "helm.sh/hook-weight": "-3"
-    #  "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
+    "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
   labels:
     app: linkerd-janitor
 spec:
