include cert header and footer

--- a/helm/linkerd2-app/templates/hook-pre-install-update-config-with-cert-job.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-update-config-with-cert-job.yaml
@@ -17,6 +17,7 @@ rules:
   - configmaps
   resourceName:
   - linkerd-config
+  - linkerd-identity-ca-crt
   verbs:
   - "*"
 - apiGroups:
@@ -112,5 +113,6 @@ spec:
           done; 
           sed -i "s/REPLACE_ME/$CERT/" /tmp/config.yaml; 
           kubectl -n linkerd replace configmap linkerd-config -f /tmp/config.yaml;
+          kubectl -n linkerd create configmap linkerd-identity-ca-crt --from-literal=ca.crt="-----BEGIN CERTIFICATE-----\n$CERT\n-----END CERTIFICATE-----";
       restartPolicy: Never
   backoffLimit: 6
