--- a/helm/linkerd2-app/templates/hook-pre-install-identity-certs.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-identity-certs.yaml
@@ -20,42 +20,7 @@ spec:
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: Certificate
 metadata:
-  name: linkerd-ca
-  namespace: {{.Namespace}}
-  labels:
-    {{.ControllerComponentLabel}}: identity
-    {{.ControllerNamespaceLabel}}: {{.Namespace}}
-  annotations:
-    {{.CreatedByAnnotation}}: {{default (printf "linkerd/helm %s" .LinkerdVersion) .CliVersion}}
-    "helm.sh/hook": pre-install
-    "helm.sh/hook-weight": "-5"
-spec:
-  secretName: linkerd-ca-tls
-  commonName: linkerd
-  isCA: true
-  issuerRef:
-    name: linkerd-selfsigning-issuer
----
-apiVersion: certmanager.k8s.io/v1alpha1
-kind: Issuer
-metadata:
-  name: linkerd-ca-issuer
-  namespace: {{.Namespace}}
-  labels:
-    {{.ControllerComponentLabel}}: identity
-    {{.ControllerNamespaceLabel}}: {{.Namespace}}
-  annotations:
-    {{.CreatedByAnnotation}}: {{default (printf "linkerd/helm %s" .LinkerdVersion) .CliVersion}}
-    "helm.sh/hook": pre-install
-    "helm.sh/hook-weight": "-5"
-spec:
-  ca:
-    secretName: linkerd-ca-tls
----
-apiVersion: certmanager.k8s.io/v1alpha1
-kind: Certificate
-metadata:
-  name: linkerd
+  name: linkerd-identity-issuer
   namespace: {{.Namespace}}
   labels:
     {{.ControllerComponentLabel}}: identity
@@ -66,11 +31,11 @@ metadata:
     "helm.sh/hook-weight": "-5"
 spec:
   secretName: linkerd-identity-issuer
-  commonName: linkerd
+  commonName: identity.linkerd.{{.ClusterDomain}}
+  isCA: true
+  keyAlgorithm: ecdsa
   issuerRef:
-    name: linkerd-ca-issuer
-  dnsNames:
-  - identity.linkerd.{{.ClusterDomain}}
+    name: linkerd-selfsigning-issuer
 {{- end}}
 {{- end}}
 {{- end}}
