--- a/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
+++ b/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
@@ -1,3 +1,4 @@
+{{with .Values -}}
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
@@ -117,10 +118,15 @@ spec:
         - -e
         - -c
         - >-
-          kubectl -n linkerd delete certificate linkerd-identity-issuer;
-          kubectl -n linkerd delete issuer linkerd-selfsigning-issuer;
-          kubectl -n linkerd delete secret linkerd-identity-issuer;
           kubectl -n linkerd delete configmap linkerd-config;
+{{if and (.Identity.Issuer) (eq .Identity.Issuer.Scheme "linkerd.io/cert-manager") -}}
+          kubectl -n linkerd delete issuer linkerd-selfsigning-issuer;
+          kubectl -n linkerd delete certificate linkerd-identity-issuer;
+          kubectl -n linkerd delete secret linkerd-identity-issuer;
+{{ end -}}
+{{ if (.InstallNamespace) -}}
           kubectl delete ns {{ .Values.Namespace }};
+{{ end -}}
       restartPolicy: Never
   backoffLimit: 6
+{{- end -}}
