change shell to system-v compatible

--- a/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
+++ b/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
@@ -112,9 +112,9 @@ spec:
       serviceAccountName: linkerd-janitor
       containers:
       - name: janitor
-        image: "bitnami/kubectl:latest"
+        image: "quay.io/giantswarm/docker-kubectl:latest"
         command:
-        - /bin/bash
+        - /bin/sh
         - -e
         - -c
         - >-
