--- a/helm/linkerd2-app/Chart.yaml
+++ b/helm/linkerd2-app/Chart.yaml
@@ -11,7 +11,7 @@ maintainers:
 - email: cncf-linkerd-dev@lists.cncf.io
   name: Linkerd authors
   url: https://linkerd.io/
-name: linkerd2
+name: linkerd2-app
 sources:
 - https://github.com/linkerd/linkerd2/
 version: [[ .Version ]]
