clean ups and fixes

--- a/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
+++ b/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
@@ -1,10 +1,10 @@
-{{with .Values -}}
+{{ with .Values -}}
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
   name: linkerd-janitor
-  namespace: {{ .Values.Namespace }}
+  namespace: {{ .Namespace }}
   annotations:
     "helm.sh/hook": "post-delete"
     "helm.sh/hook-weight": "-5"
@@ -16,7 +16,7 @@ rules:
   - ""
   resources:
   - configmaps
-  resourceName:
+  resourceNames:
   - linkerd-config
   verbs:
   - delete
@@ -24,7 +24,7 @@ rules:
   - ""
   resources:
   - secrets
-  resourceName:
+  resourceNames:
   - linkerd-identity-issuer
   verbs:
   - delete
@@ -32,15 +32,15 @@ rules:
   - ""
   resources:
   - namespaces
-  resourceName:
-  - {{ .Values.Namespace }}
+  resourceNames:
+  - {{ .Namespace }}
   verbs:
   - delete
 - apiGroups:
   - certmanager.k8s.io
   resources:
   - issuers
-  resourceName:
+  resourceNames:
   - linkerd-selfsigning-issuer
   verbs:
   - delete
@@ -48,7 +48,7 @@ rules:
   - certmanager.k8s.io
   resources:
   - certificates
-  resourceName:
+  resourceNames:
   - linkerd-identity-issuer
   verbs:
   - delete
@@ -57,7 +57,7 @@ rules:
   resources:
   - podsecuritypolicies
   resourceNames:
-  - linkerd-{{.Values.Namespace}}-control-plane
+  - linkerd-{{ .Namespace }}-control-plane
   verbs:
   - use
 ---
@@ -65,12 +65,11 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: linkerd-janitor
-  namespace: {{ .Values.Namespace }}
+  namespace: {{ .Namespace }}
   annotations:
     "helm.sh/hook": "post-delete"
     "helm.sh/hook-weight": "-5"
     "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
-  namespace: {{ .Values.Namespace }}
   labels:
     app: linkerd-janitor
 ---
@@ -78,7 +77,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
   name: linkerd-janitor
-  namespace: {{ .Values.Namespace }}
+  namespace: {{ .Namespace }}
   annotations:
     "helm.sh/hook": "post-delete"
     "helm.sh/hook-weight": "-4"
@@ -88,18 +87,17 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: linkerd-janitor
-    namespace: {{ .Values.Namespace }}
+    namespace: {{ .Namespace }}
 roleRef:
   kind: Role
   name: linkerd-janitor
-  namespace: {{ .Values.Namespace }}
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: batch/v1
 kind: Job
 metadata:
   name: linkerd-janitor
-  namespace: {{ .Values.Namespace }}
+  namespace: {{ .Namespace }}
   annotations:
     "helm.sh/hook": "post-delete"
     "helm.sh/hook-weight": "-3"
@@ -119,14 +117,14 @@ spec:
         - -c
         - >-
           kubectl -n linkerd delete configmap linkerd-config;
-{{if and (.Identity.Issuer) (eq .Identity.Issuer.Scheme "linkerd.io/cert-manager") -}}
+{{- if and (.Identity.Issuer) (eq .Identity.Issuer.Scheme "linkerd.io/cert-manager") }}
           kubectl -n linkerd delete issuer linkerd-selfsigning-issuer;
           kubectl -n linkerd delete certificate linkerd-identity-issuer;
           kubectl -n linkerd delete secret linkerd-identity-issuer;
-{{ end -}}
-{{ if (.InstallNamespace) -}}
-          kubectl delete ns {{ .Values.Namespace }};
-{{ end -}}
+{{- end }}
+{{- if (.InstallNamespace) }}
+          kubectl delete ns {{ .Namespace }};
+{{- end }}
       restartPolicy: Never
   backoffLimit: 6
 {{- end -}}
