--- a/helm/linkerd2-app/templates/hook-pre-install-update-config-with-cert-job.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-update-config-with-cert-job.yaml
@@ -6,7 +6,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
   name: global-config-creator
-  namespace: {{ .Values.Namespace }}
+  namespace: {{ .Namespace }}
   annotations:
     "helm.sh/hook": "pre-install"
     "helm.sh/hook-weight": "-5"
@@ -18,7 +18,7 @@ rules:
   - ""
   resources:
   - configmaps
-  resourceName:
+  resourceNames:
   - linkerd-config
   verbs:
   - "*"
@@ -26,7 +26,7 @@ rules:
   - ""
   resources:
   - secrets
-  resourceName:
+  resourceNames:
   - linkerd-identity-issuer
   verbs:
   - "get"
@@ -37,7 +37,7 @@ rules:
   resources:
   - podsecuritypolicies
   resourceNames:
-  - linkerd-{{.Values.Namespace}}-control-plane
+  - linkerd-{{ .Namespace }}-control-plane
   verbs:
   - "use"
 ---
@@ -45,12 +45,12 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: global-config-creator
-  namespace: {{ .Values.Namespace }}
+  namespace: {{ .Namespace }}
   annotations:
     "helm.sh/hook": "pre-install"
     "helm.sh/hook-weight": "-5"
     "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
-  namespace: {{ .Values.Namespace }}
+  namespace: {{ .Namespace }}
   labels:
     app: global-config-creator
 ---
@@ -58,7 +58,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
   name: global-config-creator
-  namespace: {{ .Values.Namespace }}
+  namespace: {{ .Namespace }}
   annotations:
     "helm.sh/hook": "pre-install"
     "helm.sh/hook-weight": "-4"
@@ -68,18 +68,18 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: global-config-creator
-    namespace: {{ .Values.Namespace }}
+    namespace: {{ .Namespace }}
 roleRef:
   kind: Role
   name: global-config-creator
-  namespace: {{ .Values.Namespace }}
+  namespace: {{ .Namespace }}
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: batch/v1
 kind: Job
 metadata:
   name: global-config-creator
-  namespace: {{ .Values.Namespace }}
+  namespace: {{ .Namespace }}
   annotations:
     "helm.sh/hook": "pre-install"
     "helm.sh/hook-delete-policy": "hook-succeeded,hook-failed"
