works now with unix shell syntax

--- a/helm/linkerd2-app/templates/hook-pre-install-update-config-with-cert-job.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-update-config-with-cert-job.yaml
@@ -99,8 +99,8 @@ spec:
         - -c
         - >-
           while true; do 
-              export CERT=`kubectl -n linkerd get secret linkerd-identity-issuer -o jsonpath="{.data['ca\.crt']}" | base64 -d -w 0`;
-              if [ $? -eq 0 ] && [ ! -z $CERT ]; then 
+              export CERT=`kubectl -n linkerd get secret linkerd-identity-issuer -o jsonpath="{.data['ca\.crt']}" | base64 -d`;
+              if [ $? -eq 0 ] && [ ! -z "$CERT" ]; then 
                   break; 
               fi; 
               echo \"waiting for cert\"; 
