set back dynamic version for architect-orb

--- a/helm/linkerd2-app/Chart.yaml
+++ b/helm/linkerd2-app/Chart.yaml
@@ -14,5 +14,4 @@ maintainers:
 name: linkerd2-app
 sources:
 - https://github.com/linkerd/linkerd2/
-#version: [[ .Version ]]
-version: 0.0.1
+version: [[ .Version ]]
