missing label on namespace

--- a/helm/linkerd2-app/templates/hook-pre-install-namespace.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-namespace.yaml
@@ -14,6 +14,7 @@ metadata:
     "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "-10"
   labels:
+    {{.ControllerNamespaceLabel}}: {{.Namespace}}
     {{.LinkerdNamespaceLabel}}: "true"
     config.linkerd.io/admission-webhooks: disabled
 {{ end -}}
