--- a/helm/linkerd2-app/templates/hook-pre-install-update-config-with-cert-job.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-update-config-with-cert-job.yaml
@@ -90,7 +90,8 @@ spec:
       serviceAccountName: global-config-creator
       containers:
       - name: global-config-creator
-        image: "quay.io/giantswarm/docker-kubectl:latest"
+        image: "{{ .Values.kubectlImage.registry }}/{{ .Values.kubectlImage.name }}:{{ .Values.kubectlImage.tag }}"
+        imagePullPolicy: "{{ .Values.kubectlImage.pullPolicy }}"
         command:
         - /bin/sh
         - -e
