fix image tempalting

--- a/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
+++ b/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
@@ -110,8 +110,8 @@ spec:
       serviceAccountName: linkerd-janitor
       containers:
       - name: janitor
-        image: "{{ .Values.kubectlImage.registry }}/{{ .Values.kubectlImage.name }}:{{ .Values.kubectlImage.tag }}"
-        imagePullPolicy: "{{ .Values.kubectlImage.pullPolicy }}"
+        image: "{{ .kubectlImage.registry }}/{{ .kubectlImage.name }}:{{ .kubectlImage.tag }}"
+        imagePullPolicy: "{{ .kubectlImage.pullPolicy }}"
         command:
         - /bin/sh
         - -e
