--- a/helm/linkerd2-app/Chart.yaml
+++ b/helm/linkerd2-app/Chart.yaml
@@ -11,7 +11,10 @@ maintainers:
 - email: cncf-linkerd-dev@lists.cncf.io
   name: Linkerd authors
   url: https://linkerd.io/
+- name: Giant Swarm applications team
+  url: https://github.com/giantswarm/linkerd2-app
 name: linkerd2-app
 sources:
 - https://github.com/linkerd/linkerd2/
+- https://github.com/giantswarm/linkerd2-app
 version: [[ .Version ]]
