multiple fixes for namespace handling

--- a/helm/linkerd2-app/Chart.yaml
+++ b/helm/linkerd2-app/Chart.yaml
@@ -17,4 +17,5 @@ name: linkerd2-app
 sources:
 - https://github.com/linkerd/linkerd2/
 - https://github.com/giantswarm/linkerd2-app
-version: [[ .Version ]]
+#version: [[ .Version ]]
+version: 0.2.0
