fix domain name in cert

--- a/helm/linkerd2-app/templates/hook-pre-install-identity-certs.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-identity-certs.yaml
@@ -31,7 +31,7 @@ metadata:
     "helm.sh/hook-weight": "-5"
 spec:
   secretName: linkerd-identity-issuer
-  commonName: identity.linkerd.{{.ClusterDomain}}
+  commonName: identity.{{.Namespace}}.{{.ClusterDomain}}
   isCA: true
   keyAlgorithm: ecdsa
   issuerRef:
