Linkerd2 ready for playground (#2)

--- a/helm/linkerd2-app/templates/hook-pre-install-update-config-with-cert-job.yaml
+++ b/helm/linkerd2-app/templates/hook-pre-install-update-config-with-cert-job.yaml
@@ -90,7 +90,8 @@ spec:
       serviceAccountName: global-config-creator
       containers:
       - name: global-config-creator
-        image: "quay.io/giantswarm/docker-kubectl:latest"
+        image: "{{ .kubectlImage.registry }}/{{ .kubectlImage.name }}:{{ .kubectlImage.tag }}"
+        imagePullPolicy: "{{ .kubectlImage.pullPolicy }}"
         command:
         - /bin/sh
         - -e
@@ -98,7 +99,7 @@ spec:
         - -c
         - >-
           while true; do 
-              export CERT=`kubectl -n linkerd get secret linkerd-identity-issuer -o jsonpath="{.data['ca\.crt']}" | base64 -d`;
+              export CERT=`kubectl -n {{ .Namespace }} get secret linkerd-identity-issuer -o jsonpath="{.data['ca\.crt']}" | base64 -d`;
               if [ $? -eq 0 ] && [ ! -z "$CERT" ]; then 
                   break; 
               fi; 
@@ -106,7 +107,7 @@ spec:
               sleep 1; 
           done; 
           while true; do 
-              kubectl -n linkerd get cm linkerd-config -o yaml --export > /tmp/config.yaml; 
+              kubectl -n {{ .Namespace }} get cm linkerd-config -o yaml --export > /tmp/config.yaml; 
               if [ $? -eq 0 ]; then 
                   break; 
               fi; 
@@ -114,7 +115,7 @@ spec:
               sleep 1; 
           done; 
           awk -v CERT="$CERT" 'BEGIN{gsub("\n", "\\n", CERT)}; {gsub("REPLACE_ME", CERT);print $0}' /tmp/config.yaml > /tmp/config-out.yaml;
-          kubectl -n linkerd replace configmap linkerd-config -f /tmp/config-out.yaml;
+          kubectl -n {{ .Namespace }} replace configmap linkerd-config -f /tmp/config-out.yaml;
       restartPolicy: Never
   backoffLimit: 6
 {{- end}}
