--- a/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
+++ b/helm/linkerd2-app/templates/hook-post-delete-remove-certs.yaml
@@ -110,21 +110,20 @@ spec:
       serviceAccountName: linkerd-janitor
       containers:
       - name: janitor
-        image: "quay.io/giantswarm/docker-kubectl:latest"
+        image: "{{ .kubectlImage.registry }}/{{ .kubectlImage.name }}:{{ .kubectlImage.tag }}"
+        imagePullPolicy: "{{ .kubectlImage.pullPolicy }}"
         command:
         - /bin/sh
         - -e
         - -c
         - >-
-          kubectl -n linkerd delete configmap linkerd-config;
+          kubectl -n {{ .Namespace }} delete configmap linkerd-config;
 {{- if and (.Identity.Issuer) (eq .Identity.Issuer.Scheme "linkerd.io/cert-manager") }}
-          kubectl -n linkerd delete issuer linkerd-selfsigning-issuer;
-          kubectl -n linkerd delete certificate linkerd-identity-issuer;
-          kubectl -n linkerd delete secret linkerd-identity-issuer;
+          kubectl -n {{ .Namespace }} delete issuer linkerd-selfsigning-issuer;
+          kubectl -n {{ .Namespace }} delete certificate linkerd-identity-issuer;
+          kubectl -n {{ .Namespace }} delete secret linkerd-identity-issuer;
 {{- end }}
-{{- if (.InstallNamespace) }}
           kubectl delete ns {{ .Namespace }};
-{{- end }}
       restartPolicy: Never
   backoffLimit: 6
 {{- end -}}
